[gd_scene load_steps=2 format=3 uid="uid://n8ilueqg8q34"]

[ext_resource type="Script" uid="uid://dx4v5u2vrewfo" path="res://high_level_example_2/scripts/main_menu.gd" id="1_ychkt"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ychkt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 108.0
offset_bottom = 225.0

[node name="PlayerName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player Name"

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Ex: Pitoco"

[node name="ServerIP" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Server IP"

[node name="IPInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Ex: 127.0.0.1"

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Server"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Server"

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
